frontend/src/components/shotlist/sidebar/sceneAttribute/sceneAttribute.scss
[data-theme="dark"] div.sceneAttribute {
  --scene-placeholder-color: hsl(0, 0%, 43%);
  --scene-underline-color: hsl(0, 0%, 20%);
}

div.sceneAttribute{
  --scene-placeholder-color: hsl(0, 0%, 57%);
  --scene-underline-color: hsl(0, 0%, 80%);

  display: flex;
  align-items: center;
  border-bottom: 2px solid var(--scene-underline-color);
  transition: border-color 0.2s ease, outline-color 0.2s ease;

  &:has(*:focus-visible){
    border-color: var(--accent);
    outline-color: var(--accent);
  }

  .readOnlyValue{
    padding: .3rem;
    min-height: 1.5rem;
    font-size: .95rem;

    &.empty{
      color: var(--text-50);
      font-style: italic;
    }
  }

  .input{
    border: none;
    display: grid;
    align-items: end;
    cursor: text;
    min-height: 38px;
    position: relative;
    width: 100%;

    .text{
      width: 100%;
      height: fit-content;
      padding: .3rem .2rem;
      vertical-align: middle;
      border: none;
      outline: none;
      font-size: .95rem;
    }

    .placeholder{
      font-weight: 400;
      color: var(--scene-placeholder-color);
      position: absolute;
      margin-left: .2rem;
      margin-bottom: .3rem;
      pointer-events: none;
    }
  }

  .select{
    width: 100%;
    height: 100%;
  }

  .icon{
    translate: 0 4px;
  }
}

